<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.huawei.podcast.ui.main.viewmodel.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_trending"
                    style="@style/app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/trending"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:layout_marginTop="276dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_trending"
                    android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                    tools:layout_editor_absoluteX="26dp" />

                <TextView
                    android:id="@+id/txt_category"
                    style="@style/app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_trending" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@+id/txt_category" />

                <TextView
                    android:id="@+id/txt_sub_category"
                    style="@style/app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/str_sub_cat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_category" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_sub_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@+id/txt_sub_category"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/txt_interest"
                    style="@style/app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/str_interest"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_sub_category" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:visibility="@{viewModel.showError == null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@+id/txt_interest"
                    tools:layout_editor_absoluteX="4dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>